--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "ora": "^1.1.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-quantity-queries": "^0.4.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
